syntax = "proto3";

package vegvisir.common.datatype;

option java_multiple_files = true;
option java_package = "com.vegvisir.common.datatype.proto";
option java_outer_classname = "VegvisirCommonDatatypeProto";
option objc_class_prefix = "VEGVISIR";

// Vegvisir Common


enum ControlSignal {
    VERSION = 0;
    ADD_BLOCKS = 1;
}


message ProtocolVersion {
    int32 major = 1;
    int32 minor = 2;
    int32 patch = 3;
}

message Timestamp {
    int64 utc_time = 1;
    int64 elapsed_time = 2;
}

message Location {
    float longitude = 1;
    float latitude = 2;
    float altitude = 3;
    Timestamp timestamp = 4;
}

message LocationRequestResponse {
    oneof content_oneof {
        Location location = 1;
        string error_message = 2;
    }
}

message LocationServiceNotAvailableException {
    string error_message = 1;
}