syntax = "proto3";

package vegvisir.network.datatype;

option java_multiple_files = true;
option java_package = "com.vegvisir.network.datatype.proto";
option java_outer_classname = "VegvisirNetworkDatatypeProto";
option objc_class_prefix = "VEGVISIR";

import "vegvisirCommon.proto";
import "charlotte.proto";


message VegvisirProtocolMessage {
    vegvisir.common.datatype.ControlSignal cmd = 1;
    repeated charlotte.Block blocks = 2;
    vegvisir.common.datatype.ProtocolVersion version = 3;
}

message Payload {
  string type = 1;
  oneof content_oneof {
    VegvisirProtocolMessage message = 2;
    string info = 3;
  }
}

message Identifier {
  oneof idtype_oneof {
    string name = 1;
  }
}

message Peer {
  Identifier id = 1;
  Connection conn = 2;
}

message PeerView {
  repeated Peer active_peers = 1;
  repeated Peer connected_peers = 2;
}



// EndPointConnection
message Connection {
  Identifier remote_id = 1;
  vegvisir.common.datatype.Timestamp connected_time = 2;
  vegvisir.common.datatype.Timestamp wakeup_time = 3;
}

message ConnectionCloseResponse {
  string error_message = 1;
}

message SendResponse {
  string error_message = 1;
}

message SendRequest {
  Payload payload = 1;
}

message SendInteruptedException {
  oneof exception_type_oneof {
    ConnectionLostException lost_connection = 1;
  }
}

message RecvInteruptedException {
  oneof exception_type_oneof {
    ConnectionLostException lost_connection = 1;
  }
}

message ConnectionLostException {
  string error_message = 1;
  Identifier remote_id = 2;
}
